# colorexpansi

./: README.md  pyproject.toml
src/colorexpansi/: __init__.py  _ansi.py  _format.py  _logging.py  _spec.py
test/: test_spec.py
