[tool.poetry]
name = "colorexpansi"
version = "0.1.0a0"
description = ""
authors = ["Brian Schubert <brianm.schubert@gmail.com>"]
readme = "README.md"
packages = [
    { include = "colorexpansi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

