[tool.poetry]
name = "colorexpansi"
version = "0.1.0a0"
description = ""
authors = ["Brian Schubert <brianm.schubert@gmail.com>"]
readme = "README.md"
packages = [
    { include = "colorexpansi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black config.
[tool.black]
# How many characters per line to allow.
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
line-length = 88
# Don't skip skip temporary sanity checks.
safe = true
# Python versions that should be supported by Black's output.
target-version = ["py38"]
# Set to true to preview style changes that may be added in black's next major release.
preview = false

# isort config.
[tool.isort]
profile = "black"
